# libsodium-play

./: CMakeLists.txt  main.c
